Supprimer les identifiants de citation et clarifier les sources (Europe)

--- a/europe.html
+++ b/europe.html
@@ -30,15 +30,15 @@
       <!-- Illustration supplémentaire pour l’Europe -->
       <figure>
         <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/2f/War_in_Ukraine_(33258793696).jpg/800px-War_in_Ukraine_(33258793696).jpg" alt="Une scène du conflit en Ukraine qui marque la géopolitique européenne">
-        <figcaption>Conflit en Ukraine – Wikimedia Commons (CC BY‑SA 2.0)【434205253376021†L166-L190】</figcaption>
+        <figcaption>Conflit en Ukraine – Wikimedia Commons (CC BY‑SA 2.0)</figcaption>
       </figure>
       <h3>Fragmentation politique et fragilité économique</h3>
       <p>
         L’année 2025 s’annonce comme l’une des plus périlleuses pour l’Union
         européenne. La fragmentation politique, l’essoufflement économique et
-        l’instabilité sociale fragilisent la cohésion du continent【20401116098601†L59-L70】. En
+        l’instabilité sociale fragilisent la cohésion du continent. En
         France, en Allemagne et au Royaume‑Uni, des crises politiques
-        paralysent les gouvernements et limitent leur capacité à agir【20401116098601†L63-L67】.
+        paralysent les gouvernements et limitent leur capacité à agir.
         La montée des mouvements populistes et l’érosion du consensus sur
         l’intégration européenne exacerbent ces tensions.
       </p>
@@ -49,11 +49,11 @@
         énergétique de l’Europe. Privée de gaz russe bon marché, l’UE a dû
         réactiver des centrales à charbon et importer du gaz naturel liquéfié
         pour éviter les pénuries, compromettant sa transition vers une énergie
-        propre【158871145048739†L1025-L1038】. Les infrastructures énergétiques
+        propre. Les infrastructures énergétiques
         deviennent aussi des cibles privilégiées pour des cyberattaques, exposant
-        les réseaux électriques et gaziers à des risques majeurs【158871145048739†L1040-L1043】.
+        les réseaux électriques et gaziers à des risques majeurs.
         En parallèle, la guerre en Ukraine reste un foyer de tensions qui
-        retarde la reconstruction et déstabilise l’Est du continent【20401116098601†L72-L79】.
+        retarde la reconstruction et déstabilise l’Est du continent.
       </p>
 
       <h3>Crise climatique et cybersécurité</h3>
@@ -62,9 +62,9 @@
         inondations, les sécheresses et les canicules se multiplient, menaçant
         l’agriculture, les infrastructures et la santé publique. La lutte contre
         le changement climatique est l’un des principaux risques géopolitiques de
-        2025【158871145048739†L1051-L1093】. Parallèlement, la multiplication des
+        2025. Parallèlement, la multiplication des
         cyberattaques contre les institutions européennes et les entreprises
-        critiques met en lumière la fragilité numérique du continent【158871145048739†L1141-L1161】.
+        critiques met en lumière la fragilité numérique du continent.
         Ces menaces obligent les États membres à renforcer leur coopération en
         matière de cybersécurité tout en accélérant la transition énergétique.
       </p>
@@ -73,14 +73,14 @@
       <p>
         Les relations avec les États‑Unis entrent dans une nouvelle phase. Le
         retour de Donald Trump à la présidence suscite des incertitudes quant à
-        l’engagement américain en faveur de l’OTAN et du soutien à l’Ukraine【20401116098601†L84-L117】.
+        l’engagement américain en faveur de l’OTAN et du soutien à l’Ukraine.
         Face à cette instabilité, l’UE cherche à renforcer sa défense et à
         diversifier ses partenariats commerciaux. En janvier 2025, elle a
         conclu un accord commercial modernisé avec le Mexique et finalisé un
         accord vieux de vingt‑cinq ans avec le Mercosur, tout en accélérant ses
-        négociations avec l’Inde, l’Indonésie et les Philippines【32182282875184†L67-L74】. Les
+        négociations avec l’Inde, l’Indonésie et les Philippines. Les
         Européens plaident aussi pour un État providence plus fort afin de
-        garantir la cohésion sociale et la légitimité démocratique【32182282875184†L77-L83】.
+        garantir la cohésion sociale et la légitimité démocratique.
       </p>
 
       <p>
@@ -94,10 +94,9 @@
         Image : Carte politique de l’Europe – Wikimedia Commons, CC BY‑SA 4.0
       </p>
       <p class="source">
-        Sources : [1] Bertelsmann Stiftung – « Major Events and Trends Shaping
-        Europe and the World in 2025 »【20401116098601†L59-L70】【20401116098601†L63-L67】【20401116098601†L72-L79】【20401116098601†L84-L117】;
-        [2] S&P Global – « Top Geopolitical Risks of 2025 »【158871145048739†L1025-L1038】【158871145048739†L1040-L1043】【158871145048739†L1051-L1093】【158871145048739†L1141-L1161】;
-        [3] Social Europe – « The End of Certainty: A New Geopolitical Era Begins in 2025 »【32182282875184†L67-L83】.
+        Sources : Bertelsmann Stiftung – « Major Events and Trends Shaping Europe and the World in 2025 » ;
+        S&P Global – « Top Geopolitical Risks of 2025 » ;
+        Social Europe – « The End of Certainty : A New Geopolitical Era Begins in 2025 ».
       </p>
     </section>
   </main>
