Supprimer les identifiants de citation et clarifier les sources (Moyen-Orient)

--- a/moyen-orient.html
+++ b/moyen-orient.html
@@ -30,13 +30,13 @@
       <!-- Illustration supplémentaire pour le Moyen‑Orient -->
       <figure>
         <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/24/Doha%2C_Qatar%2C_Middle_East.jpg/1024px-Doha%2C_Qatar%2C_Middle_East.jpg" alt="Skyline moderne de Doha mettant en lumière la modernisation du Golfe">
-        <figcaption>Skyline de Doha – Wikimedia Commons (CC BY‑SA 4.0)【356454064235400†L165-L200】</figcaption>
+        <figcaption>Skyline de Doha – Wikimedia Commons (CC BY‑SA 4.0)</figcaption>
       </figure>
       <h3>Modernisation et disparités</h3>
       <p>
         Les États du Golfe — Arabie saoudite, Émirats arabes unis et Qatar —
         investissent massivement dans l’intelligence artificielle, l’hydrogène
-        vert et l’énergie solaire pour préparer l’après‑pétrole【242691304094468†L88-L139】【242691304094468†L141-L147】.
+        vert et l’énergie solaire pour préparer l’après‑pétrole.
         Cette modernisation contraste avec la situation de nombreux pays voisins
         où les taux de chômage élevés, la corruption et la mauvaise gouvernance
         alimentent le mécontentement populaire. Les disparités sociales et
@@ -49,10 +49,10 @@
         Le rapport de force régional évolue profondément. L’affaiblissement de
         l’Iran, dont les alliés Hamas et Hezbollah ont été décimés, ainsi que la
         chute du régime de Bachar al‑Assad en Syrie, ont réduit l’influence de
-        Téhéran et de son « axe de la résistance »【242691304094468†L150-L156】. Dans ce
+        Téhéran et de son « axe de la résistance ». Dans ce
         contexte, Israël voit sa position militaire se renforcer et bénéficie
         d’un soutien tacite des États du Golfe et de la Turquie, qui cherchent à
-        contenir l’Iran【242691304094468†L150-L174】. La prédominance américaine
+        contenir l’Iran. La prédominance américaine
         demeure, mais des acteurs comme l’Arabie saoudite, les Émirats et la
         Turquie multiplient les initiatives diplomatiques et sécuritaires pour
         peser davantage.
@@ -62,13 +62,13 @@
       <p>
         En 2025, la région reste minée par les guerres. Israël poursuit son
         offensive à Gaza et mène des opérations dans le sud du Liban et en
-        Syrie, au mépris des négociations de cessez‑le‑feu【818396601507620†L105-L128】. La
+        Syrie, au mépris des négociations de cessez‑le‑feu. La
         chute de Damas a ouvert un vide politique que des groupes islamistes
         tentent de combler, tandis que les attaques des Houthis perturbent la
-        navigation en mer Rouge【818396601507620†L105-L128】. L’érosion du droit
+        navigation en mer Rouge. L’érosion du droit
         international est flagrante : les puissances occidentales continuent de
         soutenir Israël malgré les violations des droits humains, affaiblissant
-        la confiance dans les normes multilatérales【818396601507620†L119-L127】.
+        la confiance dans les normes multilatérales.
       </p>
 
       <h3>Options iraniennes : diplomatie ou escalade</h3>
@@ -77,22 +77,22 @@
         balistiques, l’Iran doit réévaluer sa stratégie. Téhéran pourrait
         renouer avec une version négociée de l’accord sur le nucléaire (JCPOA)
         ou accélérer son programme pour se doter d’une capacité d’attaque
-        nucléaire【818396601507620†L134-L160】. La seconde option risquerait de
+        nucléaire. La seconde option risquerait de
         provoquer une frappe préventive des États‑Unis et d’Israël avant même que
         l’Iran n’atteigne la parité nucléaire. Selon les experts, la voie
         diplomatique reste la moins périlleuse, mais l’arrivée de Donald Trump
-        au pouvoir réduit la probabilité d’un engagement constructif【818396601507620†L168-L177】.
+        au pouvoir réduit la probabilité d’un engagement constructif.
       </p>
 
       <h3>Authoritarisme et mouvements populaires</h3>
       <p>
         La chute de Bachar al‑Assad représente un moment historique pour les
         militants de la région. Les exilés syriens rentrent chez eux pour
-        célébrer la fin d’un demi‑siècle d’oppression et réclamer des comptes【818396601507620†L185-L190】. Pourtant,
+        célébrer la fin d’un demi‑siècle d’oppression et réclamer des comptes. Pourtant,
         cette lueur d’espoir s’accompagne d’un durcissement autoritaire dans
         d’autres pays. Les régimes se renforcent grâce à la surveillance et à
         l’appui de puissances extérieures, tandis que les élites profitent de la
-        complaisance américaine pour réprimer les oppositions【818396601507620†L201-L218】. La
+        complaisance américaine pour réprimer les oppositions. La
         résilience des mouvements citoyens, illustrée par la mobilisation en
         Syrie, montre cependant que la volonté de changement persiste malgré la
         brutalité de l’environnement.
@@ -111,10 +111,7 @@
         Image : Carte politique du Moyen‑Orient – Wikimedia Commons, domaine public
       </p>
       <p class="source">
-        Sources : [1] Fair Observer – « The Middle East 2025: The Good, the Bad
-        and the Tragically Ugly »【242691304094468†L88-L139】【242691304094468†L141-L147】【242691304094468†L150-L156】【242691304094468†L150-L174】;
-        [2] Arab Center Washington DC – « How Will 2025 Be Different in the
-        Middle East? »【818396601507620†L105-L128】【818396601507620†L134-L160】【818396601507620†L168-L177】【818396601507620†L185-L218】.
+        Sources : Fair Observer – « The Middle East 2025: The Good, the Bad and the Tragically Ugly » ; Arab Center Washington DC – « How Will 2025 Be Different in the Middle East? ».
       </p>
     </section>
   </main>
